--- a/style_google.css
+++ b/style_google.css
@@ -70,3 +70,50 @@
    box-shadow: 0 0 15px 5px rgb(187, 180, 180);
 
 }
+.google-image
+{
+   width: 100%;
+   height: auto;
+   
+
+}
+.main-page
+{
+    margin-right: auto;
+    margin-left: auto;
+    padding-top: 10%;
+    width: 22%;
+    height: 200px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.search-bar
+{
+    margin:0 auto;
+    width:575px;
+    border-radius:30px;
+    border:1px solid #dcdcdc;
+    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.search-bar:hover{
+    box-shadow: 1px 1px 8px 1px #dcdcdc;
+  }
+.search-bar:focus-within{
+    box-shadow: 1px 1px 8px 1px #dcdcdc;
+    outline:none;
+}
+.search-box
+{
+    height:45px;
+    border:none;
+    width:500px;
+    font-size:16px;
+    outline: none;
+}
