--- a/style_google.css
+++ b/style_google.css
@@ -116,4 +116,18 @@
     width:500px;
     font-size:16px;
     outline: none;
+    border-radius:30px;
+}
+.voice-box
+{
+    height:25px;
+    border:none;
+    width:500px;
+    font-size:16px;
+    margin-right: -140px;
+    position: relative;
+}
+.search-magnifying
+{
+    padding-left: 7px;
 }
