--- a/style_google.css
+++ b/style_google.css
@@ -134,3 +134,37 @@
 {
     padding-left: 7px;
 }
+.search-buttons
+{
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    padding-top: 30px;
+    width: 500px;
+}
+.search-button-styled
+{
+    color: #8c8f93;
+    padding: 10px 10px 10px 10px;
+    border-color: whitesmoke;
+    background-color: #f2f2f2;
+    border-width: 0px;
+    width: 180px;
+    box-shadow: 0px 0px 0px 0px white;
+    margin-right: 20px;
+    border-radius: 5px;
+}
+.search-button-styled:hover
+{
+    color: #8c8f93;
+    padding: 10px 10px 10px 10px;
+    outline-color: lightgray;
+    background-color: #f2f2f2;
+    outline-width:thin;
+    outline-style:solid;
+    width: 180px;
+    border: none;
+    box-shadow: 0px 0px 0px 0px white;
+    margin-right: 20px;
+    color: #242627;
+}
