--- a/style_google.css
+++ b/style_google.css
@@ -41,17 +41,19 @@
       column-gap: 20px;
       align-items: center;
       
+      
   }
   .header-element
   {
       flex:0 0 auto; 
-
+      font-size: small;
       
   }
   .header-end
   {
       flex: 0 0 auto;
       margin-left: auto;
+      font-size: small;
       /* margin-right: auto; */
   }
   .github-icon
@@ -167,4 +169,32 @@
     box-shadow: 0px 0px 0px 0px white;
     margin-right: 20px;
     color: #242627;
+}
+.footer-bar
+{
+    bottom: 0;
+    width: 100%;
+    height: 25px;
+    background-color: #f2f2f2;
+    outline-color: lightgray;
+    border-bottom: transparent;
+    border-top: 0.2px solid lightgray;
+    position:fixed;
+    display: flex;
+    flex-direction: row;
+    width:100%;
+    height:max-content;
+    font-size: small;
+    color:rgb(114, 114, 114);
+    align-content:center;
+}
+.footer-indiv-elem
+{
+    height:100%;
+    padding-right: 30px;
+}
+.footer-indiv
+{
+    margin-left: auto;
+    padding-right: 30px;
 }
