--- a/style_google.css
+++ b/style_google.css
@@ -40,7 +40,7 @@
       height: fit-content;
       column-gap: 20px;
       align-items: center;
-      
+      color: rgb(114, 114, 114);
       
   }
   .header-element
@@ -199,5 +199,5 @@
     padding-right: 30px;
 }
 a:visited{
-    color: inherit;
+    color: rgb(114, 114, 114);
 }
